django-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: django-service
spec:
  selector:
    app: django-container
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
